--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -4,11 +4,11 @@ inherits: wercker/ubuntu12.04-ruby2.0.0@1.0.0
 type: main
 platform: ubuntu@12.04
 description: Box for Wercker to build and deploy Dispatch front-end components using multistage capistrano.
-packages:
-    - nodejs
-    - compass
-    - grunt
-    - bower
+# packages:
+#     - nodejs
+#     - compass
+#     - grunt
+#     - bower
 keywords:
     - nodejs
     - ruby
