--- a/wercker-box.yml
+++ b/wercker-box.yml
@@ -1,38 +1,18 @@
-name: Dispatch Build
+name: Dispatch-Build
 version: 1.0.0
 inherits: wercker/ubuntu12.04-ruby2.0.0@1.0.0
 type: main
 platform: ubuntu@12.04
 description: Box for Wercker to build and deploy Dispatch front-end components using multistage capistrano.
-# packages:
-#     - nodejs
-#     - compass
-#     - grunt
-#     - bower
+packages:
+    - nodejs
+    - compass
+    - grunt
+    - bower
 keywords:
     - nodejs
     - ruby
     - compass
     - grunt
     - bower
-script: |
-    sudo apt-get update -y
-    sudo apt-get install -y wget build-essential
-
-    # node.js
-    export NODEVERSION=0.10.29
-    cd $HOME
-    mkdir nodeinstall
-    cd nodeinstall
-    wget http://nodejs.org/dist/v$NODEVERSION/node-v$NODEVERSION.tar.gz
-    tar xzf node-v$NODEVERSION.tar.gz
-    cd node-v$NODEVERSION
-    ./configure
-    make
-    sudo make install
-    cd $HOME
-    rm -fr nodeinstall
-    node -v
-
-    # dependencies
-    sudo npm install -g compass grunt-cli bower
+script: ./init.sh
